repair overflow, add wrapper
overflow didn't work on body in mobile devices.
added wrapper to fix the issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,29 +4,33 @@
 @import 'global';
 @import 'colors';
 
-body {
+.wrapper{
+	position: relative;
 	overflow-x: hidden;
+	&::after {
+		transition: all 0.5s ease-in-out;
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 100%;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
+	  }
+	  &.dim {
+		overflow: hidden;
+		&::after{
+		  left: 0;
+		  
+		}
+	  }
+}
+
+body {
 	font-size: 18px;
 	background: $white;
 	color: $gray;
 	font-family: 'Plus Jakarta Sans', sans-serif;
-  &::after {
-    transition: all 0.5s ease-in-out;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  &.dim {
-    overflow: hidden;
-    &::after{
-      left: 0;
-      
-    }
-  }
 }
 
 .container {
